--- a/master-config.json
+++ b/master-config.json
@@ -582,6 +582,13 @@
         "$.fromFY"
       ]
     },
+     "RoadType": {
+      "masterName": "RoadType",
+      "isStateLevel": true,
+      "uniqueKeys": [
+       "$.code"
+      ]
+    },
     "Penalty": {
       "masterName": "Penalty",
       "isStateLevel": true,
